fea-rs/test-data/parse-tests/bad/rsub_multi.fea
# rsub rules can only have a single marked glyph
feature test {
    rsub a b' d' f by g;
} test;
